third_party/WebKit/Source/WebCore/rendering/RenderFlexibleBox.h
@@ -62,6 +62,8 @@ protected:
     virtual void computeIntrinsicLogicalWidths(LayoutUnit& minLogicalWidth, LayoutUnit& maxLogicalWidth) const OVERRIDE;
     virtual void computePreferredLogicalWidths() OVERRIDE;
 
+    virtual void styleDidChange(StyleDifference, const RenderStyle* oldStyle);
+
 private:
     enum FlexSign {
         PositiveFlexibility,
